# p2pmaze

./: CMakeLists.txt  Makefile  README  config_default.ini  config_demo.ini  gamemonitor.py  monitor_server.py  run_demo.sh  run_p2p.sh
doc/: ServerLayout.odg  how_to_use.odt
src/: Constants.h  General.h  Settings.h  Structs.h  convert.sh
src/client/: Client.cpp  ClientActionModule.cpp  ClientActionModule.h  PlayerAI.h
src/comm/: MasterMessages.h  Message.h  MessageModuleIN.h  MessageModuleOUT.h  MessageOkJoin.h  MessageRequestClientUpdate.h  MessageWithIP.cpp  MessageWithIP.h  MessageXY.cpp
src/game/: GameObject.h  Player.h  Region.cpp  Region.h
src/gamemonitor/: MainWindow.cpp  ReadThread.cpp  SliderDialog.cpp  main.cpp
src/graphics/font/: BitmapFont.h
src/master/: AlgSpread.h  BasicLoadBalance.cpp
src/peer/: CustomPlayerList.h  MapManagModule_main.cxx  MapManagModule_region.cxx  PeriodicEventsModule.cpp  PlayerBucket.cpp  Server.cpp  StatisticsModule.cpp  WorldUpdateModule.h  map.cpp  map.h  message_handler.cpp  message_handler.h  network_interface.cpp  peer.cpp
src/server/: CustomPlayerList.cpp  MapManagModule.cpp  MapManagModule.h  MapManagModule_main.cxx  PeriodicEventsModule.h  PlayerBucket.h  RegularUpdateModule.h  ServerData.cpp  ServerData.h  WorldUpdateModule.cpp
src/superpeer/: AlgLightest.cpp  AlgLightest.h  BasicLoadBalance.h  Master.cpp  Master.h  MasterModule.cpp  MasterModule.h  SenderModule.cpp  SenderModule.h  load_balancer.cpp  load_balancer.h  superpeer.cpp
src/utils/: Configurator.h  SDL_barrier.cpp
trunk/: Makefile  config_cluster.ini  config_demo.ini  config_quad.ini  gamemonitor.py  run_demo.sh  run_p2p.sh
trunk/doc/: ClientDesign.odg  GraphicsEN.odg  LogFileStructure.odg  Protocols.odg
trunk/src/: Constants.h  General.h  Settings.h  Structs.h
trunk/src/client/: Client.h  ClientActionModule.cpp  ClientRenderModule.cpp  PlayerAI.cpp
trunk/src/comm/: Message.cpp  MessageModuleIN.cpp  MessageModuleOUT.cpp  MessageOkJoin.cpp  MessageQueue.cpp  MessageQueue.h  MessageRequestClientUpdate.cpp  MessageWithSerializator.cpp  MessageWithSerializator.h  MessageXY.h  ServerMasterProtocol.h
trunk/src/game/: GameObject.cpp  Player.cpp
trunk/src/gamemonitor/: Makefile  SlowReader.cpp  SlowReader.h  help.html.h
trunk/src/master/: AlgLightest.cpp  AlgLocalityAware.h  AlgSpread.cpp  BasicLoadBalance.h
trunk/src/peer/: CustomPlayerList.cpp  MapManagModule.h  MapManagModule_main.cxx  PeriodicEventsModule.h  PlayerBucket.h  RegularUpdateModule.cpp  RegularUpdateModule.h  Server.cpp  ServerData.cpp  ServerData.h  StatisticsModule.h  message_handler.h  (+5 more)
(+29 files in other folders)
